--- a/GoogleCalendar.ipynb
+++ b/GoogleCalendar.ipynb
@@ -2,68 +2,6 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "from __future__ import print_function\n",
-    "import datetime\n",
-    "import pickle\n",
-    "import os.path\n",
-    "from googleapiclient.discovery import build\n",
-    "from google_auth_oauthlib.flow import InstalledAppFlow\n",
-    "from google.auth.transport.requests import Request\n",
-    "\n",
-    "# If modifying these scopes, delete the file token.pickle.\n",
-    "SCOPES = ['https://www.googleapis.com/auth/calendar.readonly']\n",
-    "\n",
-    "\n",
-    "def main():\n",
-    "    \"\"\"Shows basic usage of the Google Calendar API.\n",
-    "    Prints the start and name of the next 10 events on the user's calendar.\n",
-    "    \"\"\"\n",
-    "    creds = None\n",
-    "    # The file token.pickle stores the user's access and refresh tokens, and is\n",
-    "    # created automatically when the authorization flow completes for the first\n",
-    "    # time.\n",
-    "    if os.path.exists('token.pickle'):\n",
-    "        with open('token.pickle', 'rb') as token:\n",
-    "            creds = pickle.load(token)\n",
-    "    # If there are no (valid) credentials available, let the user log in.\n",
-    "    if not creds or not creds.valid:\n",
-    "        if creds and creds.expired and creds.refresh_token:\n",
-    "            creds.refresh(Request())\n",
-    "        else:\n",
-    "            flow = InstalledAppFlow.from_client_secrets_file(\n",
-    "                'credentials.json', SCOPES)\n",
-    "            creds = flow.run_local_server(port=0)\n",
-    "        # Save the credentials for the next run\n",
-    "        with open('token.pickle', 'wb') as token:\n",
-    "            pickle.dump(creds, token)\n",
-    "\n",
-    "    service = build('calendar', 'v3', credentials=creds)\n",
-    "\n",
-    "    # Call the Calendar API\n",
-    "    now = datetime.datetime.utcnow().isoformat() + 'Z' # 'Z' indicates UTC time\n",
-    "    print('Getting the upcoming 10 events')\n",
-    "    events_result = service.events().list(calendarId='primary', timeMin=now,\n",
-    "                                        maxResults=20, singleEvents=True,\n",
-    "                                        orderBy='startTime').execute()\n",
-    "    events = events_result.get('items', [])\n",
-    "\n",
-    "    if not events:\n",
-    "        print('No upcoming events found.')\n",
-    "    for event in events:\n",
-    "        start = event['start'].get('dateTime', event['start'].get('date'))\n",
-    "        print(start, event['summary'])\n",
-    "\n",
-    "\n",
-    "if __name__ == '__main__':\n",
-    "    main()"
-   ]
-  },
-  {
-   "cell_type": "code",
    "execution_count": 1,
    "metadata": {},
    "outputs": [],
@@ -166,13 +104,19 @@
     "    \n",
     "    def updateGoogleCalendar(self):\n",
     "        photojson = self.getPhotoEvents()\n",
-    "        credentials = self.getCredentials()\n",
-    "        server = credentials.server\n",
-    "        database = credentials.database\n",
-    "        username = credentials.user\n",
-    "        password = credentials.password        \n",
+    "        credentials = self.getCredentials()     \n",
     "        engine = create_engine(\"mssql+pyodbc:///?odbc_connect={}\".format(self.params))\n",
     "        command = 'Exec cmp.mergeGoogleCalendar @json =' + \"'\" + photojson + \"'\"\n",
+    "        cxn = engine.raw_connection()\n",
+    "        cur = cxn.cursor()\n",
+    "        cur.execute(command)\n",
+    "        cur.close()\n",
+    "        cxn.commit()\n",
+    "        \n",
+    "    def mergeIntoOneOffBills(self):\n",
+    "        credentials = self.getCredentials()\n",
+    "        engine = create_engine(\"mssql+pyodbc:///?odbc_connect={}\".format(self.params))\n",
+    "        command = 'Exec mergeGoogleCalendar_OneOffBills'\n",
     "        cxn = engine.raw_connection()\n",
     "        cur = cxn.cursor()\n",
     "        cur.execute(command)\n",
@@ -189,14 +133,17 @@
    "metadata": {},
    "outputs": [
     {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "\n",
-      "\n",
-      "\n",
-      "\n",
-      "\n"
+     "ename": "NameError",
+     "evalue": "name 'SCOPES' is not defined",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[1;31mNameError\u001b[0m                                 Traceback (most recent call last)",
+      "\u001b[1;32m<ipython-input-2-cd79d635b509>\u001b[0m in \u001b[0;36m<module>\u001b[1;34m\u001b[0m\n\u001b[0;32m      4\u001b[0m     \u001b[0ma\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mmergeIntoOneOffBills\u001b[0m\u001b[1;33m(\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m      5\u001b[0m \u001b[1;32mif\u001b[0m \u001b[0m__name__\u001b[0m \u001b[1;33m==\u001b[0m \u001b[1;34m'__main__'\u001b[0m\u001b[1;33m:\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[1;32m----> 6\u001b[1;33m     \u001b[0mmain\u001b[0m\u001b[1;33m(\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m",
+      "\u001b[1;32m<ipython-input-2-cd79d635b509>\u001b[0m in \u001b[0;36mmain\u001b[1;34m()\u001b[0m\n\u001b[0;32m      1\u001b[0m \u001b[1;32mdef\u001b[0m \u001b[0mmain\u001b[0m\u001b[1;33m(\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m:\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m      2\u001b[0m     \u001b[0ma\u001b[0m \u001b[1;33m=\u001b[0m \u001b[0mgoogleCalendar\u001b[0m\u001b[1;33m(\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[1;32m----> 3\u001b[1;33m     \u001b[0ma\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mupdateGoogleCalendar\u001b[0m\u001b[1;33m(\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m\u001b[0;32m      4\u001b[0m     \u001b[0ma\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mmergeIntoOneOffBills\u001b[0m\u001b[1;33m(\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m      5\u001b[0m \u001b[1;32mif\u001b[0m \u001b[0m__name__\u001b[0m \u001b[1;33m==\u001b[0m \u001b[1;34m'__main__'\u001b[0m\u001b[1;33m:\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n",
+      "\u001b[1;32m<ipython-input-1-e0a2660ded42>\u001b[0m in \u001b[0;36mupdateGoogleCalendar\u001b[1;34m(self)\u001b[0m\n\u001b[0;32m     96\u001b[0m \u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m     97\u001b[0m     \u001b[1;32mdef\u001b[0m \u001b[0mupdateGoogleCalendar\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mself\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m:\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[1;32m---> 98\u001b[1;33m         \u001b[0mphotojson\u001b[0m \u001b[1;33m=\u001b[0m \u001b[0mself\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mgetPhotoEvents\u001b[0m\u001b[1;33m(\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m\u001b[0;32m     99\u001b[0m         \u001b[0mcredentials\u001b[0m \u001b[1;33m=\u001b[0m \u001b[0mself\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mgetCredentials\u001b[0m\u001b[1;33m(\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m    100\u001b[0m         \u001b[0mengine\u001b[0m \u001b[1;33m=\u001b[0m \u001b[0mcreate_engine\u001b[0m\u001b[1;33m(\u001b[0m\u001b[1;34m\"mssql+pyodbc:///?odbc_connect={}\"\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mformat\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mself\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mparams\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n",
+      "\u001b[1;32m<ipython-input-1-e0a2660ded42>\u001b[0m in \u001b[0;36mgetPhotoEvents\u001b[1;34m(self)\u001b[0m\n\u001b[0;32m     54\u001b[0m             \u001b[1;32melse\u001b[0m\u001b[1;33m:\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m     55\u001b[0m                 flow = InstalledAppFlow.from_client_secrets_file(\n\u001b[1;32m---> 56\u001b[1;33m                     'credentials.json', SCOPES)\n\u001b[0m\u001b[0;32m     57\u001b[0m                 \u001b[0mcreds\u001b[0m \u001b[1;33m=\u001b[0m \u001b[0mflow\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mrun_local_server\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mport\u001b[0m\u001b[1;33m=\u001b[0m\u001b[1;36m0\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m     58\u001b[0m             \u001b[1;31m# Save the credentials for the next run\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n",
+      "\u001b[1;31mNameError\u001b[0m: name 'SCOPES' is not defined"
      ]
     }
    ],
@@ -204,6 +151,7 @@
     "def main():\n",
     "    a = googleCalendar()\n",
     "    a.updateGoogleCalendar()\n",
+    "    a.mergeIntoOneOffBills()\n",
     "if __name__ == '__main__':\n",
     "    main()\n"
    ]
