--- a/GoogleCalendar.ipynb
+++ b/GoogleCalendar.ipynb
@@ -49,6 +49,7 @@
     "        \n",
     "    def getPhotoEvents(self):\n",
     "        creds = None\n",
+    "        SCOPES = ['https://www.googleapis.com/auth/calendar.readonly']\n",
     "            # The file token.pickle stores the user's access and refresh tokens, and is\n",
     "            # created automatically when the authorization flow completes for the first\n",
     "            # time.\n",
